Legger til første unit tester